--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,10 @@
 @import "bootstrap";
 
- 
+.sidebar{
+  background-color: aqua;
+  height: 100%;
+  margin: 0;
+  display: block;
+  text-align: left;
+  bottom: 0px;
+}
