[WIP]勤怠一覧画面の作成-サイドバーとプルダウンの表示

--- a/app/views/users/attendance.html.erb
+++ b/app/views/users/attendance.html.erb
@@ -1,2 +1,11 @@
-  <h1>Users#home</h1>
-  <p>Find me in app/views/users/attendance.html.erb</p>
+<h1>勤怠状況一覧</h1>
+<div class="search">
+  <div class="search-year">
+    <div id="date"></div>
+  </div>
+  <div id="test">通ってるか確かめる用のタグ</div>
+ここに検索条件とかかく
+</div>
+<div class="attendance-table">
+一覧テーブル書く
+<div>
