--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,9 +6,31 @@ h1{
   font-size: 25px;
   // color: red;
 }
-.pulldown-year{
-  background-color: aqua
+// .pulldown-year{
+//   background-color: aqua
+// }
+// .pulldown-month{
+//   background-color: red;
+// }
+.search{
+  margin-top: 50px;
 }
-.pulldown-month{
-  background-color: red;
+.search-year{
+  flex-wrap: wrap;
+  display: inline-block;
+  width: 100%;
+}
+#pulldown{
+  display: inline;
+  flex-basis: 100%
+}
+.search-rightend{
+  float: right;
+}
+.inputtime, .attend-save{
+  display: inline;
+}
+
+.table {
+  margin: 10px;
 }
