--- a/app/views/users/attendance.html.erb
+++ b/app/views/users/attendance.html.erb
@@ -1,11 +1,20 @@
 <h1>勤怠状況一覧</h1>
 <div class="search">
   <div class="search-year">
-    <div id="date"></div>
+    <div id="pulldown"></div>
+    <div class="search-rightend">
+      <div class="inputtime">
+        <input type="button" name="syukkin" value="出勤"/>
+        <input type="button" name="taikin" value="退勤"/>
+      </div>
+      <div class="attend-save">
+        <input type="button" name="attend_save" value="保存"/>
+      </div>
+    </div>
   </div>
   <div id="test">通ってるか確かめる用のタグ</div>
 ここに検索条件とかかく
 </div>
-<div class="attendance-table">
-一覧テーブル書く
+<div id="attendance-table" class="table">
+
 <div>
