--- a/app/frontend/packs/users.scss
+++ b/app/frontend/packs/users.scss
@@ -1,10 +1,11 @@
-@import "application";
+
 body{
-  font-size: 15px
+  font-size: 15px  
 }
 h1{
-  font-size: 25px;
-  // color: red;
+  font-size: 25px;  
+  color: red;
+  
 }
 // .pulldown-year{
 //   background-color: aqua
