--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,10 @@
     <title>Kintai</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= stylesheet_link_tag params[:controller] %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag params[:controller] %>
+    <%= stylesheet_pack_tag 'application' %>
+    <%= stylesheet_pack_tag params[:controller] %>
+    <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag params[:controller] %>
 </head>
 <body>
 <% if @current_user %>
