--- a/app/frontend/src/stylesheets/tops.scss
+++ b/app/frontend/src/stylesheets/tops.scss
@@ -1,4 +1,4 @@
-@import "application";
+// @import "./application";
 
 h1 {
     color: black;
@@ -11,7 +11,7 @@ h1 {
   max-width: 500px;
   display: block;
   border-radius: 10%;
-  background-color: aquamarine;  
+  background-color: aquamarine;
     margin: 50px auto 0;
     padding: 10px;
     text-align: center;
