--- a/app/frontend/src/stylesheets/application.scss
+++ b/app/frontend/src/stylesheets/application.scss
@@ -3,14 +3,15 @@
 
 html,
 body {
+  background-color: #B2E2EC;
   position: relative;
+  color: #5B5B5B;
   min-height: 100%;
   height: 100%;
 }
 body {
   font-size: 20px;
   line-height: 1.4;
-  background-color: #F7F7F7;
 }
 .row{
   height: 100%;
@@ -40,7 +41,7 @@ body {
   display: block;
   min-height: 100%;
   // height: calc(100% - 250px);
-  background-color: black;
+  background-color: #6495ED;
   min-width: 250px;
   max-width: 250px;
   .sidebar-header {
@@ -119,12 +120,22 @@ a:hover{
   background-color: gray;
 }
 
-// フラッシュ
-.flash {
+.flash-login{
   top: 0px;
   margin-left: 250px;
   color: white;
-  background: rgb(251, 170, 88);
+  background: #F99F48;
+  text-align: center;
+  z-index: 10;
+  width: 100%;
+  height: 30px;
+  vertical-align: middle;
+}
+.flash-logout{
+  top: 0px;
+  // margin-left: 250px;
+  color: white;
+  background: #F99F48;
   text-align: center;
   z-index: 10;
   width: 100%;
