--- a/app/frontend/src/stylesheets/tops.scss
+++ b/app/frontend/src/stylesheets/tops.scss
@@ -1,7 +1,6 @@
 // @import "./application";
 
 h1 {
-    color: black;
     font-size: 30px;
     margin: 20px auto 0;
 }
@@ -11,14 +10,19 @@ h1 {
   max-width: 500px;
   display: block;
   border-radius: 10%;
-  background-color: aquamarine;
-    margin: 50px auto 0;
-    padding: 10px;
-    text-align: center;
-    .item {
-      margin:5px auto;
-      max-width: 400px;
-      border-radius: 0%;
-      font-size: 20px;
-    }
+  background-color: #FC9D9D;
+  margin: 50px auto 0;
+  padding: 10px;
+  text-align: center;
+  color: #5B5B5B;
+  .item {
+    margin:5px auto;
+    max-width: 400px;
+    border-radius: 0%;
+    font-size: 20px;
+  }
+}
+
+.btn{
+  color: #5B5B5B;
 }
