.gitignoreの設定見直し  #1

--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -7,7 +7,7 @@
           <%= form_tag("/login") do %>
             <div class="main item" style="text-align:end;">
               <p>email
-              <%= email_field :user,value: @email,:address  %>
+              <%= email_field :user,:address  %>
               </p>
             </div>
             <div class="main item" style="text-align:end;">
