--- a/app/views/users/attendance.html.erb
+++ b/app/views/users/attendance.html.erb
@@ -4,7 +4,7 @@
     <div class="search">
       <div class="search-year">
         <div id="pulldown">
-            <%= form_tag('users/show') do %>
+            <%= form_with('users/show') do %>
               <%= select_tag('select_year',
                               options_for_select(@first_year,
                                                 class: 'opt_year',
