form_withで書き換え close #17 #19 #23 #25 #27 #34

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="col-md-7 user-profile">
           <ul class="profile-profile">プロフィール</ul>
           <ul class="profile-username"><%= @current_user.name %></ul>
-          <ul class="profile-userid"><%= @current_user.user_id %></ul>
+          <%# <ul class="profile-userid"><%= @current_user.id %></ul> 
           <ul class="profile-email"><%= @current_user.email %></ul>
         </div>
       </div>
