--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -4,23 +4,11 @@
       <div class="main">
         <div class="login-form">
           <h1>ログイン</h1>
-          <%= form_with(url: "/tops/create") do %>
-            <div class="main item" style="text-align:end;">
-              <p>email
-              <input type="email" name="email" value="<% @email %>" >
-              </p>
-            </div>
-            <div class="main item" style="text-align:end;">
-              <p>パスワード
-              <input type="password" name="password" value="<% @password %>">
-              </p>
-            </div>
-              <% if @error_message %>
-                <div class="error_message">
-                  <%= @error_message %>
-                </div>
-              <% end %>
-            <input class="btn btn-default" type="submit" value="新規登録">
+          <%= form_with(url: "/tops/create") do |form| %>
+            <%= input_email %>
+            <%= input_password %>
+            <%= show_message %>
+            <%= form.submit "新規登録" , class: "btn btn-default" %>
           <% end %>
         </div>
       </div>
