--- a/app/frontend/src/stylesheets/users.scss
+++ b/app/frontend/src/stylesheets/users.scss
@@ -4,15 +4,8 @@ body{
 }
 h1{
   font-size: 25px;
-  color: red;
-
 }
-// .pulldown-year{
-//   background-color: aqua
-// }
-// .pulldown-month{
-//   background-color: red;
-// }
+
 .search{
   margin-top: 50px;
 }
@@ -25,13 +18,12 @@ h1{
   display: inline;
   flex-basis: 100%
 }
-.search-rightend{
+.search-rightend, .save-button{
   float: right;
 }
 .inputtime, .attend-save{
   display: inline;
 }
-
 .table {
   margin: 10px;
 }
