--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -5,19 +5,32 @@
       <div class="search-year">
         <div id="pulldown">
           <%= form_with url: 'users/show' do %>
-            <%= pulldown_year %>
-            <%= pulldown_month %>
+            <%= select_tag('select_year',
+                options_for_select(@show_years,
+                        class: 'opt_year',
+                        selected: @today.year.to_i),
+                :onchange => 'users/show')%>年
+            <%= select_tag('select_month',
+                options_for_select((1..12),
+                        class:'opt_month',
+                        selected: @today.month.to_i),
+                :onchange => 'users/show')%>月
           <% end %>
         </div>
-          <%= attendance_button %>
+        <div class='search-rightend'>
+          <div class='inputtime'>
+            <%= button_tag('出勤', name: 'syukkin') %>
+            <%= button_tag('退勤', name: 'taikin') %>
+          </div>
+          <%= form_with(url: "/users/save", local: true, class: 'save-button') do %>
+            <div class='attend-save'>
+              <%= button_tag('保存', name: 'attend_save') %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
-    <div id="attendance-table" class="table">
-      <table class='table table-bordered' >
-        <%= table_header %>
-        <%= table_rows %>
-      </table>
-    </div>
+    <%= render :partial => 'attendance_table' %>
   </body>
 </html>
  
