[WIP]README.mdをかく

--- a/app/frontend/src/stylesheets/application.scss
+++ b/app/frontend/src/stylesheets/application.scss
@@ -41,7 +41,7 @@ body {
   display: block;
   min-height: 100%;
   // height: calc(100% - 250px);
-  background-color: #6495ED;
+  background-color: #00e676;
   min-width: 250px;
   max-width: 250px;
   .sidebar-header {
@@ -50,7 +50,7 @@ body {
     margin-bottom: 8px;
   }
   .sidebar-header.header-cover {
-    background-color: aqua;
+    background-color: #76ff03;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
