--- a/app/frontend/src/stylesheets/users.scss
+++ b/app/frontend/src/stylesheets/users.scss
@@ -1,29 +1,59 @@
+@import "./application";
 
-body{
-  font-size: 15px
-}
-h1{
-  font-size: 25px;
+h1 {
+  font-size: 30px;
+  margin: 20px auto 0;
 }
 
-.search{
-  margin-top: 50px;
+.main {
+// height: 100%;
+max-width: 500px;
+display: block;
+border-radius: 10%;
+background-color: #FC9D9D;
+margin: 50px auto 0;
+padding: 10px;
+text-align: center;
+color: #5B5B5B;
+.item {
+  margin:5px auto;
+  max-width: 400px;
+  border-radius: 0%;
+  font-size: 20px;
+  text-align:end;
 }
-.search-year{
-  flex-wrap: wrap;
-  display: inline-block;
-  width: 100%;
 }
-#pulldown{
-  display: inline;
-  flex-basis: 100%
+
+.btn{
+color: #5B5B5B;
 }
-.search-rightend, .save-button{
-  float: right;
-}
-.inputtime, .attend-save{
-  display: inline;
-}
-.table {
-  margin: 10px;
-}
+
+
+// body{
+//   font-size: 15px
+// }
+// h1{
+//   font-size: 25px;
+// }
+
+// .search{
+//   margin-top: 50px;
+// }
+// .search-year{
+//   flex-wrap: wrap;
+//   display: inline-block;
+//   width: 100%;
+// }
+// #pulldown{
+//   display: inline;
+//   flex-basis: 100%
+// }
+// .search-rightend, .save-button{
+//   float: right;
+// }
+// .inputtime, .attend-save{
+//   display: inline;
+// }
+// .table {
+//   margin: 10px;
+// }
