--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <%= render :partial => 'attendance_table' %>
+    <%= render :partial => 'templates/attendance_table' %>
   </body>
 </html>
  
