--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,31 +22,31 @@
           </div>
           <div class="sidebar-menu">
             <div class="sidebar-nav">
-              <%= render partial: "layouts/sidebar_tab",
+              <%= render partial: "templates/sidebar_tab",
               locals: {controller_name: "attendances", action_name: "show",
               tabname: "出勤状況一覧", showcount: ""}%>
-              <%= render partial: "layouts/sidebar_tab",
+              <%= render partial: "templates/sidebar_tab",
               locals: {controller_name: "attendances", action_name: "show",
               tabname: "出勤者リスト", showcount: ""}%>
-              <%= render partial: "layouts/sidebar_tab",
+              <%= render partial: "templates/sidebar_tab",
               locals: {controller_name: "attendances", action_name: "show",
               tabname: "有休休暇申請", showcount: 12}%>
-              <%= render partial: "layouts/sidebar_tab",
+              <%= render partial: "templates/sidebar_tab",
               locals: {controller_name: "attendances" , action_name: "show",
               tabname: "ユーザー設定", showcount: ""}%>
-              <%= render partial: "layouts/sidebar_tab",
+              <%= render partial: "templates/sidebar_tab",
               locals: {controller_name: "sessions" , action_name: "new",
               tabname: "ログアウト", showcount: ""}%>
             </div>
           </div>
         </div>
-        <%= render partial: "layouts/flash",locals: {class_name: "flash-login"} %>
+        <%= render partial: "templates/flash",locals: {class_name: "flash-login"} %>
         <div class="col-sm-9 wrapper-login">
           <%= yield %>
         </div>
       </div>
     <% else %>
-      <%= render partial: "layouts/flash",locals: {class_name: "flash-logout"} %>
+      <%= render partial: "templates/flash",locals: {class_name: "flash-logout"} %>
       <div class="wrapper-logout">
         <%= yield %>
       </div>
