--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
         <div class="login-form">
           <h1>新規登録</h1>
           <%= form_with model: @user, url: users_path ,method: :post , local: true do |form| %>
-            <%= render :partial => "input", :locals => {f: form}%>
+            <%= render :partial => "templates/input", :locals => {f: form}%>
             <%= form.submit "新規登録" , class: "btn btn-default" %>
           <% end %>
         </div>
