labelタグを使う

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
         <div class="col-sm-3 sidebar open">
           <div class="row sidebar-header header-cover" >
             <div class="col-md-7 user-profile">
-              <ul class="profile-profile">プロフィール</ul>
-              <ul class="profile-username"><%= @current_user.name %></ul>
-              <ul class="profile-email"><%= @current_user.email %></ul>
+              <ul class="profile-profile"><%= label :page ,'プロフィール' %></ul>
+              <ul class="profile-username"><%= label :page ,@current_user.name %></ul>
+              <ul class="profile-email"><%= label :page ,@current_user.email %></ul>
             </div>
           </div>
           <div class="sidebar-menu">
