--- a/app/views/templates/_sidebar_tab.html.erb
+++ b/app/views/templates/_sidebar_tab.html.erb
@@ -1,4 +1,8 @@
 <%= link_to :controller => controller_name , :action => action_name , class: "row" do %>
-  <p class="col-sm-9"><%= tabname %></p>
-  <span class="col-sm-3 sidebar-badge"><%= showcount %></span>
+  <p class="col-sm-9">
+    <%= label :page , tabname %>
+  </p>
+  <span class="col-sm-3 sidebar-badge">
+    <%= label :page, showcount %>
+  </span>
 <% end %>
