--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -4,17 +4,17 @@
     <div class="search">
       <div class="search-year">
         <div id="pulldown">
-          <%= form_with url: 'users/show' do |form| %>
+          <%= form_with url: attendance_path(@current_user.id), method: :get do |form| %>
             <%= select_tag('select_year',
                 options_for_select(show_years_map ,
                         class: 'opt_year',
                         selected: @today.year.to_i),
-                :onchange => 'users/show')%>年
+                :onchange => 'this.form.submit();')%>年
             <%= select_tag('select_month',
                 options_for_select((1..12),
                         class:'opt_month',
                         selected: @today.month.to_i),
-                :onchange => 'users/show')%>月
+                :onchange => 'this.form.submit();')%>月
           <% end %>
         </div>
         <div class='search-rightend'>
@@ -22,7 +22,8 @@
             <%= button_tag('出勤', name: 'syukkin') %>
             <%= button_tag('退勤', name: 'taikin') %>
           </div>
-          <%= form_with(url: "/users/save", local: true, class: 'save-button') do %>
+          <%= form_with url: attendance_path(@current_user.id) ,method: 'patch',
+           local: true, class: 'save-button' do |f| %>
             <div class='attend-save'>
               <%= button_tag('保存', name: 'attend_save') %>
             </div>
