--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -8,14 +8,12 @@
             <%= select_tag('select_year', 
                 options_for_select(show_years_map ,
                         class: 'opt_year',
-                        selected: @today.year.to_i),
-                # form: 'attend-save',
+                        selected: @select_date.year.to_i),
                 :onchange => 'this.form.submit();')%>年
             <%= select_tag('select_month',
                 options_for_select((1..12),
                         class:'opt_month',
-                        selected: @today.month.to_i),
-                # form: 'attend-save',
+                        selected: @select_date.month.to_i),
                 :onchange => 'this.form.submit();')%>月
           <% end %>
         </div>
@@ -24,11 +22,12 @@
             <%= button_tag('出勤', name: 'syukkin') %>
             <%= button_tag('退勤', name: 'taikin') %>
           </div>
-          <%= form_with url: attendance_path(@current_user.id) ,method: 'patch',
-           local: true, class: 'save-button' do |f| %>
+          <%= form_with model: @attendance_table, url: attendance_path(@current_user.id) ,
+            method: 'patch', local: true, class: 'save-button' do |f| %>
             <div class='attend-save'>
-              <input id='attend-save' type='submit' value= 'save'>
-              <%= button_tag('保存', name: 'attend_save') %>
+            <%# hiddenで年月情報を埋め込む, modelにテーブルの時間情報 %>
+            <%# js側で欲しい情報を取得させる %>
+              <%= button_tag('保存', name: 'attend_save' ) %>
             </div>
           <% end %>
         </div>
