--- a/app/views/templates/_attendance_table.html.erb
+++ b/app/views/templates/_attendance_table.html.erb
@@ -1,5 +1,5 @@
-<div id="attendance-table" class="table">
-  <table class='table table-bordered' >
+<div class="table">
+  <table id="attendance-table" class='table table-bordered' >
     <tr>
       <th><%= label :page, '日付'%></th>
       <th><%= label :page, '曜日'%></th>
@@ -8,19 +8,17 @@
       <th><%= label :page, '状態'%></th>
     </tr>
     <% (1..@lastday).each do |row| %>
-    <%# <% byebug %>
-    <%# ヘルパーに任せてその日のAttendanceTimeを取得 %>
-    <% @attendance_row = choice_attendanceTime(@attendance_table ,@today, row) %>
+    <% @attendance_row = choice_attendanceTime(@attendance_table ,@select_date, row) %>
       <tr name='row_<%=row%>'>
         <th name='date_<%=row%>'><%=row%></th>
-        <th name='row_of_week_<%=@today.change(day: row ).wday%>'>
-          <%= date_of_week(@today.change(day: row ).wday) %>
+        <th name='row_of_week_<%=@select_date.change(day: row ).wday%>'>
+          <%= date_of_week(@select_date.change(day: row ).wday) %>
         </th>
         <th name='start_work_<%=row%>'>
-          <%= time_select("work_#{row}", 'start',:default => {:hour => '10', :minute => '00',form: form_id}) %>
+          <%= show_start_attendanceTime(@attendance_row,row) %>
         </th>
         <th name='end_work_<%=row%>'>
-          <%= time_select("work_#{row}", 'end',:default => {:hour => '19', :minute => '00',form: form_id}) %>
+          <%= show_end_attendanceTime(@attendance_row,row) %>
         </th>
         <th>
           <%= select_tag("status_#{row}",
