--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -17,23 +17,23 @@
                 :onchange => 'this.form.submit();')%>月
           <% end %>
         </div>
-        <div class='search-rightend'>
-          <div class='inputtime'>
-            <%= button_tag('出勤', name: 'syukkin') %>
-            <%= button_tag('退勤', name: 'taikin') %>
-          </div>
-          <%= form_with model: @attendance_table, url: attendance_path(@current_user.id) ,
-            method: 'patch', local: true, class: 'save-button' do |f| %>
-            <div class='attend-save'>
-            <%# hiddenで年月情報を埋め込む, modelにテーブルの時間情報 %>
-            <%# js側で欲しい情報を取得させる %>
-              <%= button_tag('保存', name: 'attend_save' ) %>
-            </div>
-          <% end %>
-        </div>
       </div>
     </div>
-    <%= render :partial => 'templates/attendance_table', :locals => {form_id: 'attend-save'} %>
+    <div class='search-rightend'>
+      <div class='inputtime'>
+        <%= button_tag('出勤', name: 'syukkin') %>
+        <%= button_tag('退勤', name: 'taikin') %>
+      </div>
+    </div>
+    <%= form_with url: attendance_path(@current_user.id) ,
+      method: 'patch', local: true, class: 'save-button' do |f| %>
+      <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
+      <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>      
+      <div class='attend-save'>
+        <%= button_tag('保存', name: 'attend_save' ) %>
+      </div>
+      <%= render :partial => 'templates/attendance_table', :locals => {form: f} %>
+   <% end %>
   </body>
 </html>
  
